tests/errors/sem_undefined1.java
public class sem_undefined1 {
    public static void main(String[] args) {
        a = a + 1;
    }
}
